--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
 
   fluent_ui: ^4.12.0
   bitsdojo_window: ^0.1.6
+  flutter_acrylic: ^1.1.4
+  scaled_app: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -25,3 +27,5 @@ flutter:
 
   assets:
     - assets/example.log
+    - assets/background_blue.png
+    - assets/background_red.png
