--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: log_viewer
-description: "A new Flutter project."
+description: "A simple log viewer built with Flutter and Fluent UI."
 publish_to: 'none'
 
 version: 1.0.0+1
@@ -17,7 +17,8 @@ dependencies:
   scaled_app: ^2.3.0
   file_picker: ^10.3.1
   url_launcher: ^6.3.2
-  fluent_window: ^0.0.1
+  fluent_window: ^0.1.9
+
 
 dev_dependencies:
   flutter_test:
